docs-site/versioned_docs/version-0.8.0/workflows/find-jobs-and-apply-workflow.md
---
id: find-jobs-and-apply-workflow
title: Find Jobs and Apply Workflow
description: Recommended end-to-end pre-application workflow from pipeline run to marking jobs as applied.
sidebar_position: 1
---

## Goal

This guide documents the main intended pre-application workflow in JobOps.

If you follow this order, you get the strongest results from discovery, scoring, tailoring, and tracking.

## Recommended flow (in order)

### 1) Run a pipeline first

From the **Jobs** page, use the top-right pipeline/run control.

What this does:

- fetches jobs from enabled extractors
- scores relevance against your resume/profile
- optionally tailors top jobs and prepares PDFs

Important:

- Some scrapers are slower and can take significant time.
- Larger scrape ranges and more sources increase run duration.
- If you are returning after a few days, run the pipeline again before reviewing jobs. Existing results are not auto-refreshed, so older discovered jobs may be stale or expired.

### 2) Configure pipeline advanced settings

In pipeline advanced settings, configure:

- how many jobs to discover (approximate target)
- minimum score threshold for tailoring
- how many jobs should be tailored/generated

This directly controls how many jobs appear downstream in `discovered` and `ready`.

### 3) Review the `Discovered` column

After the run, `discovered` is populated with jobs found by extractors.

For each discovered job:

- review the suitability score
- read the AI fit justification in **Fit Assessment**
- decide whether the opportunity is worth advancing

### 4) Work from `Ready` for applications

`ready` jobs are the primary application queue.

These jobs already have tailored PDFs generated for the specific job description, using the workflow described in [Reactive Resume](../features/reactive-resume).

At this stage:

1. Open job details.
2. Open the **search links** row when you want quick external research on LinkedIn, GitHub, or the wider web.
3. If you wrote a resume outside JobOps, use **Upload PDF** in the job detail view to attach that file to the application instead of using the generated version.
4. Optionally enable tracer links for that specific job.
5. If the job shows `PDF stale`, wait for the automatic regeneration to finish before using the refreshed PDF. You can still open or download the old PDF while it is labeled as old.
6. Download the PDF you want to submit.
7. Submit your application externally.

### 5) Mark jobs as applied in JobOps

After submitting, return to JobOps and mark the job as `applied`.

Effects:

- job moves to the `applied` state
- configured completion webhook(s) are triggered
- job is included in overview analytics

This completes the detailed pre-application loop.

## What happens next

Once a job is marked `applied`, it becomes part of:

- pipeline outcome analytics on [Overview](../features/overview)
- optional post-application workflows (inbox/review routing)

## Practical tips

- Start with conservative run sizes while tuning sources.
- Re-run the pipeline after time away when you want fresh listings.
- Increase tailored-job count only after score thresholds feel calibrated.
- Expect scraper runtime variance by source.
- Keep resume/project context up to date so scoring/tailoring quality stays high.
- Use per-job tracer links when you want measurable outbound-link analytics.
- If you use tracer links, review the risk note in [Tracer Links](../features/tracer-links): some recipients/security tools may treat redirects as suspicious.

## Related pages

- [Orchestrator](../features/orchestrator)
- [Reactive Resume](../features/reactive-resume)
- [Settings](../features/settings)
- [Overview](../features/overview)
- [Post-Application Workflow](./post-application-workflow)
- [Post-Application Tracking](../features/post-application-tracking)
